<resources>
    <string name="app_name">GPStest</string>
    <string name="output"></string>
    <string name="saved"></string>
    <string name="bear"></string>
    <string name="action_settings">Exit</string>
    <string name="button">START GPS</string>
    <string name="stop">STOP GPS</string>
    <string name="origin">SAVE CURRENT LOCATION</string>
    <string name="maps">OPEN IN GMAPS</string>
    <string name="base">TEST FIREBASE WITH NAME:</string>
    <string name="baseout">base output</string>
    <string name="title_activity_users_list">users_list</string>

    <string name="hello_world">Hello world!</string>
</resources>
