<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GPS"
    android:id="@+id/george">



    <TextView android:text="@string/output" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        android:id="@+id/button2"
        android:onClick="onSaveClick"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved"
        android:id="@+id/textView2"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bear"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:onClick="onButtonClick"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button3"
        android:onClick="onStopClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/maps"
        android:id="@+id/buttonm"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView3"
        android:onClick="onMapsClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base"
        android:id="@+id/button4"
        android:layout_above="@+id/button3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginBottom="95dp"
        android:onClick="onBaseClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baseout"
        android:id="@+id/textView4"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="43dp" />


</RelativeLayout>
